<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBook">

    <EditText
        android:id="@+id/bookName"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:autofillHints=""
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/book_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="22dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/bookAouthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/bookAouthor"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/book_author"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="22dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/bookprice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/bookprice"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:autofillHints=""
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/book_price"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/bookluch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAouthor"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/bookluch"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/book_lunch"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="22dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookprice"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/add_book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookluch"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="598dp"
        android:text="@string/add_book"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/back"
        android:layout_width="176dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:paddingStart="50dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageeeView2"
        android:layout_width="125dp"
        android:layout_height="93dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_circle_24" />


</androidx.constraintlayout.widget.ConstraintLayout>