<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBook">

    <EditText
        android:id="@+id/xbookName"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:background="@drawable/shape"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="22dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/xbookAouthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/xbookAouthor"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="22dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/xbookprice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xbookName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/xbookprice"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:autofillHints=""
        android:background="@drawable/shape"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/xbookluch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xbookAouthor"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/xbookluch"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        android:autofillHints=""
        android:background="@drawable/shape"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="22dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xbookprice"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/EditBook"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xbookluch"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="613dp"
        android:text="@string/EditBook"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/back"
        android:layout_width="176dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:paddingStart="50dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/xbookName"
        app:layout_constraintStart_toStartOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button11"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="83dp"
        android:text="@string/deletbook"
        android:backgroundTint="@color/del"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>